force-app/main/default/objects/Group_Website__c.object
<CustomObject>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <description>This field captures the id of any attachment created in its parent record</description>
        <label>Attachment Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Caption__c</fullName>
        <inlineHelpText>Limited to 150 Characters and only used on the group website as the caption on the top image of content pages (image and caption inherited from the parent node)</inlineHelpText>
        <label>Caption</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Record_Type_Old_Group_Site__c</fullName>
        <formula>IF(Name=&quot;OUR SCHOOLS&quot;, &quot;0126F000001hW0t&quot;, &quot;0126F000001hW0r&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Record Type (Old Group Site)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Subtitle__c</fullName>
        <label>Content Subtitle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Title__c</fullName>
        <label>Content Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_Attachment_Id__c</fullName>
        <description>Captures the att id of any deleted attachment in its parent record</description>
        <label>Deleted Attachment Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deletion_Prevention__c</fullName>
        <formula>&quot;True&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Prevention</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>English_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points at the parent (english) version of this record</description>
        <label>English Parent</label>
        <referenceTo>Group_Website__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>english_parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extra_Menu__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will control the appearance of this record&apos;s menu item under the upper corner menu button &quot;hamburger&quot; on a School Website (not currently being used)</description>
        <inlineHelpText>Check this field if you want the menu item of this record to be shown in the &quot;Extra Menu&quot; (hamburger) button of the School Website.</inlineHelpText>
        <label>Extra Menu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupIdText__c</fullName>
        <label>GroupIdText</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used in Web Block records to select a link to an internal node of the school website. NOTE 19/08/2015 I don&apos;t think this field is now being used and can maybe be deleted, unless it&apos;s used somewhere on the group site</description>
        <label>Internal Link</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Language__c</field>
                <operation>equals</operation>
                <valueField>Web_Content__c.Language__c</valueField>
            </filterItems>
            <filterItems>
                <field>Web_Content__c.School_List__c</field>
                <operation>contains</operation>
                <valueField>$User.School__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Web_Content__c</referenceTo>
        <relationshipLabel>Internal Links</relationshipLabel>
        <relationshipName>internal_links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_My_School_Site__c</fullName>
        <description>Used to identify the records visible in the &apos;School Site&apos; view of the &apos;Website&apos; tab based on the logged in user</description>
        <formula>OR(
   CONTAINS(School_List__c, TEXT($User.School__c)), 
   TEXT($User.School__c) = &quot;The British Schools Foundation&quot;,
   TEXT($User.School__c) = &quot;NAE&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My School Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issuu_Embed_Field__c</fullName>
        <label>Issuu Embed Field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The language of the record. This field is used in connection with the school websites</description>
        <inlineHelpText>Select the language of your record.</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EN</fullName>
                    <default>true</default>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>UZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_URL_1__c</fullName>
        <label>Link URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_URL_2__c</fullName>
        <label>Link URL 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_URL_3__c</fullName>
        <label>Link URL 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Main_Text__c</fullName>
        <inlineHelpText>Accepts special tokens like [site:name] to display the name of the school but also other complex tokens such as: [site:mail] [site:current-date] [site:url] [current-page:title] [current-page:url]</inlineHelpText>
        <label>Main Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Menu_Link_Id__c</fullName>
        <label>Menu Link Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Only_1_Translation_Per_Language_Allowed__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A UID for translated records. Populated via a workflow rule, ensures a unique combination of English_Parent.Id and Language__c to prevent more than one translation per language. Field names in this way to make error message more understandable.</description>
        <label>Only 1 Translation Per Language Allowed!</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Path_Alias__c</fullName>
        <inlineHelpText>OPTIONAL. Paste here the ending url path of the node on the old school website. Ex: from www.oldsite.com/curriculum/overview.asp paste &quot;curriculum/1styear/overview&quot;. No initial &quot;/&quot; no &quot;.asp&quot; or similar.</inlineHelpText>
        <label>Path Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_to_FB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if you want a teaser of the node to appear on the school fb page. Not valid for group website posts.</inlineHelpText>
        <label>Post to FB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_Group_Site_Copy__c</fullName>
        <description>Used as a filter in some of the views under the &apos;Website&apos; tab. Required as the &apos;Publish on Group Site&apos; field is hidden from most users via field level security but needs to be available to system admin.</description>
        <formula>Publish_on_Group_Site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publish on Group Site (Copy)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_Group_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you want this record to be shown in the group website</inlineHelpText>
        <label>Publish on Group Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_School_Site__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Click to publish this record on your school website</inlineHelpText>
        <label>Publish on School Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_List__c</fullName>
        <description>A middle step from the school override field to the school list copy field.</description>
        <formula>IF(OR(ISNULL(School_Override_Field__c), INCLUDES( School_Override_Field__c, &quot;No override&quot;)), TEXT( CreatedBy.School__c ), 
IF ( INCLUDES ( School_Override_Field__c , &quot;Nanjing&quot; ), &quot;nanjing1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Marbella&quot; ), &quot;marbella1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Navarra&quot; ), &quot;navarra1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Tashkent&quot; ), &quot;tashkent1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;São Paulo&quot; ), &quot;saopaulo1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Kuala Lumpur&quot; ), &quot;kualalumpur1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Moscow&quot; ), &quot;moscow1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Manila&quot; ), &quot;manila1;&quot;,null ) &amp;
IF ( INCLUDES ( School_Override_Field__c , &quot;Yangon&quot; ), &quot;yangon1;&quot;,null ) &amp;  
IF ( INCLUDES ( School_Override_Field__c , &quot;New York&quot; ), &quot;newyork1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Brasilia&quot; ), &quot;brasilia1;&quot;,null ) &amp;
IF ( INCLUDES ( School_Override_Field__c , &quot;Group Site&quot; ), &quot;The British Schools Foundation;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Sandbox 1&quot; ), &quot;Sandbox 1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Sandbox 2&quot; ), &quot;Sandbox 2;&quot;,null ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field to set the values from the picklist in a text array. The Schools List Copy field will copy this field. Should be hidden.</inlineHelpText>
        <label>School List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Override_Count__c</fullName>
        <formula>IF(INCLUDES(School_Override_Field__c, &quot;No Override&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Nanjing&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Marbella&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Navarra&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Tashkent&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;São Paulo&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Kuala Lumpur&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Moscow&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Manila&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;New York&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Yangon&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Brasilia&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Group Site&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Sandbox 1&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Sandbox 2&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Override Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Override_Field__c</fullName>
        <inlineHelpText>Select the name/s of the school/s you want this item to be published at.</inlineHelpText>
        <label>School Override Field</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Override</fullName>
                    <default>true</default>
                    <label>No Override</label>
                </value>
                <value>
                    <fullName>Brasilia</fullName>
                </value>
                <value>
                    <fullName>Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>Manila</fullName>
                </value>
                <value>
                    <fullName>Marbella</fullName>
                </value>
                <value>
                    <fullName>Moscow</fullName>
                </value>
                <value>
                    <fullName>Nanjing</fullName>
                </value>
                <value>
                    <fullName>Navarra</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>São Paulo</fullName>
                </value>
                <value>
                    <fullName>Tashkent</fullName>
                </value>
                <value>
                    <fullName>Yangon</fullName>
                </value>
                <value>
                    <fullName>Group Site</fullName>
                </value>
                <value>
                    <fullName>Sandbox 1</fullName>
                </value>
                <value>
                    <fullName>Sandbox 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schools_List_Copy__c</fullName>
        <formula>IF( 
   CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;), 
   English_Parent__r.School_List__c, 
   School_List__c 
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Sites</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titile_Link_8__c</fullName>
        <label>Titile Link 8</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titile_Link_9__c</fullName>
        <label>Titile Link 9</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_LInk_1__c</fullName>
        <label>Title LInk 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Link_10__c</fullName>
        <label>Title Link 10</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Link_2__c</fullName>
        <label>Title Link 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_1_TITLE__c</fullName>
        <description>The title of the matching video</description>
        <inlineHelpText>Introduce the title of the video you want to show in the Group Website.</inlineHelpText>
        <label>Video 1 TITLE</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_1_URL__c</fullName>
        <description>This field is used to upload videos to the Group Site. The videos are hosted in the VIMEO premium account and this field only needs the url of it.</description>
        <inlineHelpText>Introduce the URL of the video you want to show in the Group Website. Include the whole url, ex: http://www.myvideo.com</inlineHelpText>
        <label>Video 1 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Video_2_TITLE__c</fullName>
        <description>The title of the matching video</description>
        <inlineHelpText>Introduce the title of the video you want to show in the Group Website.</inlineHelpText>
        <label>Video 2 TITLE</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_2_URL__c</fullName>
        <description>This field is used to upload videos to the Group Site. The videos are hosted in the VIMEO premium account and this field only needs the url of it.</description>
        <inlineHelpText>Introduce the URL of the video you want to show in the Group Website. Include the whole url, ex: http://www.myvideo.com</inlineHelpText>
        <label>Video 2 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Video_3_TITLE__c</fullName>
        <description>The title of the matching video</description>
        <inlineHelpText>Introduce the title of the video you want to show in the Group Website.</inlineHelpText>
        <label>Video 3 TITLE</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_3_URL__c</fullName>
        <description>This field is used to upload videos to the Group Site. The videos are hosted in the VIMEO premium account and this field only needs the url of it.</description>
        <inlineHelpText>Introduce the URL of the video you want to show in the Group Website. Include the whole url, ex: http://www.myvideo.com</inlineHelpText>
        <label>Video 3 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>webId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>webId</label>
        <type>Text</type>
    </fields>
    <label>Website</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Order__c</columns>
        <columns>NAME</columns>
        <columns>Language__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Publish_on_Group_Site__c</columns>
        <columns>Publish_on_School_Site__c</columns>
        <columns>School_Override_Field__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Group_Site</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Publish_on_Group_Site__c</columns>
        <columns>School_Override_Field__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Group_Website__c.Top_Menu_Item,Group_Website__c.Home_Page</value>
        </filters>
        <label>Group Site</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Group_Site</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>School_Override_Field__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_My_School_Site__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Group_Website__c.Top_Menu_Item_2,Group_Website__c.Home_Page_2,Group_Website__c.Home_Page_3</value>
        </filters>
        <filters>
            <field>School_Override_Field__c</field>
            <operation>equals</operation>
            <value>Group Site</value>
        </filters>
        <filters>
            <field>School_Override_Field__c</field>
            <operation>includes</operation>
            <value>Group Site</value>
        </filters>
        <label>New Group Site</label>
        <language>en_US</language>
        <sharedTo>
            <group>BSF_Group_Directors_Admin</group>
            <group>Group_Web_Devs</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>School_Site</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>School_Override_Field__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_My_School_Site__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Group_Website__c.Top_Menu_Item_2,Group_Website__c.Home_Page_2,Group_Website__c.Home_Page_3</value>
        </filters>
        <filters>
            <field>School_Override_Field__c</field>
            <operation>notEqual</operation>
            <value>Group Site</value>
        </filters>
        <label>School Site</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Menu Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Websites</pluralLabel>
    <recordTypes>
        <fullName>Home_Page</fullName>
        <active>true</active>
        <label>Homepage (Old Group Site Only)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Page_2</fullName>
        <active>true</active>
        <label>Homepage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Page_3</fullName>
        <active>true</active>
        <label>Standalone Sidebar Parent Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Top_Menu_Item</fullName>
        <active>true</active>
        <label>Top Menu Item (Old Group Site Only)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Top_Menu_Item_2</fullName>
        <active>true</active>
        <label>Top Menu Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Top_Menu_Item_Translation</fullName>
        <active>true</active>
        <description>Should only be created via the &apos;Translate&apos; button under the English Parent record</description>
        <label>Top Menu Item Translation</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>First_Record_in_English</fullName>
        <active>true</active>
        <description>Avoid a record with empty English_Parent__c and other language than english</description>
        <errorConditionFormula>AND((Publish_on_School_Site__c = TRUE), ISBLANK(English_Parent__c), OR((ISBLANK(TEXT(Language__c))), NOT(ISPICKVAL(Language__c, &quot;EN&quot;))))</errorConditionFormula>
        <errorDisplayField>Language__c</errorDisplayField>
        <errorMessage>The language for this record must be English (EN). If you want to publish on a School Website in a language different than English you must first create the record in English and then translate it under the &apos;Translations&apos; related list.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Blank_and_No_Override</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   ISBLANK(School_Override_Field__c),
   AND(
       NOT(CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;)),
       INCLUDES(School_Override_Field__c, &quot;No Override&quot;),
       Publish_on_School_Site__c = TRUE,
       TEXT(CreatedBy.School__c) = &quot;The British Schools Foundation&quot;
       )
   )</errorConditionFormula>
        <errorMessage>The &apos;School Override Field&apos; must never be left blank and cannot include the value &apos;No Override&apos; if &apos;Publish on School Site&apos; is checked and the record was created by someone in the group office.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Change_of_English_Parent</fullName>
        <active>true</active>
        <description>Prevents the change of English Parent as this could cause problems on the site. The alternative is to clone (where available) the existing record and then delete it or create a completely new record.</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(English_Parent__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(English_Parent__c)))</errorConditionFormula>
        <errorMessage>You cannot change the &apos;English Parent&apos; of a translated record. Please create a new record instead under the relevant English (EN) record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Invalid_Translation_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
       ISBLANK(English_Parent__c),
       ISBLANK(TEXT(Language__c)),
       ISPICKVAL(Language__c, &quot;EN&quot;)
       ),
    CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;)
    )</errorConditionFormula>
        <errorMessage>A &apos;Translation Request&apos; or &apos;Translated&apos; record must have an &apos;English Parent&apos; and a &apos;Language&apos; other than &apos;EN&apos; (English) selected. If you are not requesting a translation then please use a different record type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Invalid_Translation_Record_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(   
    NOT(ISBLANK(English_Parent__c)),
    NOT(CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;))
    )</errorConditionFormula>
        <errorMessage>You can only select an &apos;English Parent&apos; for record types that include the word &apos;Translation&apos;. Please cancel this operation and create your &apos;Translation&apos; record via the &apos;Translate&apos; button of the relevant &apos;English Parent&apos; record instead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_No_Override_with_Other_Schools</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    INCLUDES(School_Override_Field__c, &quot;No Override&quot;),
    School_Override_Count__c &gt; 1
    )</errorConditionFormula>
        <errorMessage>You cannot include the value &apos;No Override&apos; together with other schools in the &apos;School Override Field&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Translations_Not_in_English</fullName>
        <active>true</active>
        <description>Prevents a user from creating a translate record in English.</description>
        <errorConditionFormula>NOT(ISBLANK(English_Parent__c)) &amp;&amp; ISPICKVAL(Language__c, &quot;EN&quot;)</errorConditionFormula>
        <errorMessage>The language of a translation record must be in a language other then EN (English).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Order_Field</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
    NOT(CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;)), 
    ISBLANK(Order__c) 
    )</errorConditionFormula>
        <errorMessage>Order cannot be blank.</errorMessage>
    </validationRules>
</CustomObject>